--- a/server/views/index.html
+++ b/server/views/index.html
@@ -39,6 +39,8 @@
                                 <div class="profileName">Alberto Ascari</div>
                                 <div class="profileRole">Fotografo</div>
                             </div>
+                            <div class="profileLink"></div>
+                            <img src="images/visit.png"/>
                         </div>
                         <div class="profilePostWrapper">
                             <div class="profilePost"></div>
