--- a/server/views/css/styles.css
+++ b/server/views/css/styles.css
@@ -1,6 +1,6 @@
 body {
-	background: #020A1B;
-	color: #ffffff;
+	background: #e9eef4;
+	color: #1c1c1c;
 	font-family: 'Merriweather', sans-serif;
 	overflow: none;
 }
@@ -9,21 +9,23 @@ body {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	height: 40px;
+	height: 60px;
+	background-color: #e65c4f;
+	color: white;
 }
 
 .titleHead{
-	font-size: 12px;
+	font-size: 16px;
 	font-weight: bold;
-	color:#eee;
+	/* color: #1c1c1c; */
 	padding-left: 24px;
 	cursor: pointer;
 }
 
 .btnBar{
-	font-size: 10px;
+	font-size: 14px;
 	text-transform: uppercase;
-	color: #eee;
+	/* color: #1c1c1c; */
 	padding-left: 24px;
 	cursor: pointer;
 }
@@ -43,53 +45,77 @@ body {
 	max-width: 800px;
 }
 
-.H1Cont{
-	font-size: 26px;
-	line-height: 30px;
+.H1Cont {
+	font-size: 64px;
+	line-height: 80px;
+	text-align: center;
 	font-weight: bold;
-	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-	text-transform: uppercase;
+	font-family: Helvetica;
+	/*text-transform: uppercase;*/
+	word-break: break-word;
 }
 
 .H2Cont{
-	font-size: 14px;
-	font-weight: bold;
-	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-	text-transform: uppercase;
+	font-size: 24px;
+	line-height: 40px;
+	padding-top: 16px;
+	text-align: center;
+	/*font-weight: bold;*/
+	font-family: Helvetica;
 }
 
 .PCont{
 	margin-top: 8px;
-	font-size: 14px;
+	font-size: 16px;
 }
 
-.loginCont{
+.loginCont {
 	display: flex;
 	flex-direction: column;
 	padding: 12px;
 	margin: 12px;
-	background-color: #eee;
+	background-color: #e65c4f;
+	border-radius: 24px;
 	color: #020A1B;
+	align-items: center;
+	width: 100%;
+}
+
+.instagramButton {
+	width: 120px;
+	height: 40px;
+	background: #1c1c1c;
+	border-radius: 12px;
+	text-align: center;
+	margin: 8px;
 }
 
 .exampleContainer{
 	margin-top: 24px;
 }
 
+.exampleH1{
+	margin-top: 8px;
+	font-size: 16px;
+}
+
 .profileWrapper{
 	display: flex;
 	flex-direction: column;
-	padding-top: 12px;
-	background-color: #2a2a2a;
+	/* padding-top: 12px; */
+	background-color: #326789;
 	border-radius: 24px;
 }
 
 .profileHead{
-	height: 80px;
+	height: 96px;
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	margin-left: 24px;
+	padding: 8px 30px;
+	background-color: #78a6c8;
+	border-top-left-radius: 24px;
+	border-top-right-radius: 24px;
 }
 
 .profilePicture{
@@ -106,8 +132,8 @@ body {
 }
 
 .profileName{
-	font-size: 16px;
-	color: white;
+	font-size: 20px;
+	color: #1c1c1c;
 	line-height: 24px;
 	text-transform: uppercase;
 	font-weight: bold;
@@ -119,6 +145,16 @@ body {
 	line-height: 18px;
 	font-weight: bold;
 	letter-spacing: 1.1px;
+}
+
+.profileLink {
+	height: 32px;
+	width: 32px;
+	background: #303030;
+	border-radius: 4px;
+	position: absolute;
+	margin-left: 704px;
+	background-image: url("/server/images/visit.png");
 }
 
 .profilePostWrapper{
