--- a/server/views/index.html
+++ b/server/views/index.html
@@ -11,9 +11,9 @@
 
 <body>
     <div class="headerBar">
-        <div class="titleHead">PhotograFinder</div>
-        <div class="btnBar">Guide</div>
-        <div class="btnBar">About Us</div>
+        <div class="titleHead" onclick="location.href='/'">PhotograFinder</div>
+        <div class="btnBar" onclick="location.href='/guide'">Guide</div>
+        <div class="btnBar" onclick="location.href='/aboutus'">About Us</div>
     </div>
     <div class="container">
         <div class="wrapper">
